--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -18,3 +18,23 @@ body {
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
 }
+
+.pulse {
+  animation: pulse-animation 1s infinite;
+  align-items: center;
+  margin: 0 auto;
+  border-radius: 30px;
+}
+
+@keyframes pulse-animation {
+  0% {
+    box-shadow: 0 0 0 0px rgba(95, 233, 145, 0.2);
+    width: 95%;
+    height: 97%;
+  }
+  100% {
+    box-shadow: 0 0 0 10px rgba(95, 233, 145, 0.2);
+    height: 100%;
+    width: 100%;
+  }
+}
